; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_i5400_edac.c_i5400_enable_error_reporting.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_i5400_edac.c_i5400_enable_error_reporting.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_ctl_info = type { %struct.i5400_pvt* }
%struct.i5400_pvt = type { i32 }

@EMASK_FBD = common dso_local global i32 0, align 4
@ENABLE_EMASK_ALL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mem_ctl_info*)* @i5400_enable_error_reporting to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i5400_enable_error_reporting(%struct.mem_ctl_info* %0) #0 {
  %2 = alloca %struct.mem_ctl_info*, align 8
  %3 = alloca %struct.i5400_pvt*, align 8
  %4 = alloca i32, align 4
  store %struct.mem_ctl_info* %0, %struct.mem_ctl_info** %2, align 8
  %5 = load %struct.mem_ctl_info*, %struct.mem_ctl_info** %2, align 8
  %6 = getelementptr inbounds %struct.mem_ctl_info, %struct.mem_ctl_info* %5, i32 0, i32 0
  %7 = load %struct.i5400_pvt*, %struct.i5400_pvt** %6, align 8
  store %struct.i5400_pvt* %7, %struct.i5400_pvt** %3, align 8
  %8 = load %struct.i5400_pvt*, %struct.i5400_pvt** %3, align 8
  %9 = getelementptr inbounds %struct.i5400_pvt, %struct.i5400_pvt* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @EMASK_FBD, align 4
  %12 = call i32 @pci_read_config_dword(i32 %10, i32 %11, i32* %4)
  %13 = load i32, i32* @ENABLE_EMASK_ALL, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* %4, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* %4, align 4
  %17 = load %struct.i5400_pvt*, %struct.i5400_pvt** %3, align 8
  %18 = getelementptr inbounds %struct.i5400_pvt, %struct.i5400_pvt* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @EMASK_FBD, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @pci_write_config_dword(i32 %19, i32 %20, i32 %21)
  ret void
}

declare dso_local i32 @pci_read_config_dword(i32, i32, i32*) #1

declare dso_local i32 @pci_write_config_dword(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
